<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_EnOcean" Id="{bec68ff9-8f1d-4ce1-b8b9-84de691aacc9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

//Gange
//	strEnOceanSwitch_Gang_3_364				: Tc2_EnOcean.STR_EnOceanSwitch;

//Rum
 	strEnOceanSwitch_Rum_6_111A                     	: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_6_111B                     	: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_6_111C                     	: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_6_162B                     	: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_6_166             	        	: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_6_173	                     	: Tc2_EnOcean.STR_EnOceanSwitch;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>