<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P_Foldedoer_6_111A_Og_6_111B_2Pcs" Id="{73463df5-40ea-4f48-950f-d8f7bcb26540}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Foldedoer_6_111A_Og_6_111B_2Pcs
(*
Rummene er delt af to foldedøre med dørkontakt i rum 6.111 og 6.111B. Når en eller flere dørkontakter aktiveres behandles de omkringliggende rum som ét rum:
	- Sensorinput sammensættes, således reguleringer har samme PV.
	- Knapfunktion sammensættes, således alle knapper kan benyttes for hele rummet.
	
Konfiguration af rum:
Rum [1, 2, 3] = [*rum 6.111*, *rum 6.111B*, *rum 6.111C*]
Dørkontakt[1,2] = [*dørkontakt_6_111*, dørkontakt_6_111B]
*)
VAR
	bFoldingDoor1Open		AT %I*		: BOOL;
	bFoldingDoor2Open		AT %I*		: BOOL;
	arrFoldingDoorOpen 							: ARRAY[1..DALI_Param.byMaxNumOfFoldingDoors] OF BOOL;
	
	arrRoomName									: ARRAY[1..nMaxNumOfRooms] OF STRING(12) := ['Rum_6_111', 'Rum_6_111B', 'Rum_6_111C'];
	arrOnZone1_SepRoom						: ARRAY[1..nMaxNumOfRooms] OF BOOL;
	arrTopButtonZone1_SepRoom			: ARRAY[1..nMaxNumOfRooms] OF BOOL;
	arrBottomButtonZone1_SepRoom		: ARRAY[1..nMaxNumOfRooms] OF BOOL;
	
	arrstPirSensorData_SepRoom			: ARRAY[1..nMaxNumOfRooms] OF ST_DALI_Sensor;
	arrstPirSensorData_ConnRoom			: ARRAY[1..nMaxNumOfRooms] OF ST_DALI_Sensor;
	
	arrTopButtonZone1_ConnRoom			: ARRAY[1..nMaxNumOfRooms] OF BOOL;
	arrBottomButtonZone1_ConnRoom	: ARRAY[1..nMaxNumOfRooms] OF BOOL;
	arrOverride_ConnRoom						: ARRAY[1..nMaxNumOfRooms] OF BOOL;

	fbFoldedoer										: SH_Light.FB_FoldingDoorCtrl_2Pcs;
END_VAR

VAR CONSTANT
	nMaxNumOfRooms				: BYTE := DALI_Param.byMaxNumOfFoldingDoors+1;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Folding door buttons
arrFoldingDoorOpen[1]					:= bFoldingDoor1Open;
arrFoldingDoorOpen[2]					:= bFoldingDoor2Open;

//Is light ON/OFF in seperate rooms
arrOnZone1_SepRoom[1]				:= P_Rum_6_111A.arrfbLysGruppe[1].fbLightCtrl.bOnZone1;
arrOnZone1_SepRoom[2]				:= P_Rum_6_111B.arrfbLysGruppe[1].fbLightCtrl.bOnZone1;
arrOnZone1_SepRoom[3]				:= P_Rum_6_111C.arrfbLysGruppe[1].fbLightCtrl.bOnZone1;

//Activations of EnOcean buttons in seperate Rooms
arrTopButtonZone1_SepRoom[1]		:= GVL_EnOcean.strEnOceanSwitch_Rum_6_111A.bT2_ON;								
arrBottomButtonZone1_SepRoom[1]	:= GVL_EnOcean.strEnOceanSwitch_Rum_6_111A.bT2_OFF;
														
arrTopButtonZone1_SepRoom[2]		:= GVL_EnOcean.strEnOceanSwitch_Rum_6_111B.bT1_ON; //Virker mestendels
arrBottomButtonZone1_SepRoom[2]	:=	GVL_EnOcean.strEnOceanSwitch_Rum_6_111B.bT1_OFF;

arrTopButtonZone1_SepRoom[3]		:= GVL_EnOcean.strEnOceanSwitch_Rum_6_111C.bT1_ON; //Er på T2, men er helt ude at skide
arrBottomButtonZone1_SepRoom[3]	:= GVL_EnOcean.strEnOceanSwitch_Rum_6_111C.bT1_OFF;

fbFoldedoer(
	arrFoldingDoorOpen					:= arrFoldingDoorOpen,
	arrRoomName							:= arrRoomName,
	arrOnZone1_SepRoom				:= arrOnZone1_SepRoom,
	arrTopButtonZone1_SepRoom	:= arrTopButtonZone1_SepRoom,
	arrBottomButtonZone1_SepRoom := arrBottomButtonZone1_SepRoom,
	arrstPirSensorData_SepRoom	:= arrstPirSensorData_SepRoom,
	arrstPirSensorData_ConnRoom := arrstPirSensorData_ConnRoom,
	arrTopButtonZone1_ConnRoom		=> arrTopButtonZone1_ConnRoom,
	arrBottomButtonZone1_ConnRoom	=> arrBottomButtonZone1_ConnRoom,
	arrOverride_ConnRoom						=> arrOverride_ConnRoom);					]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>